[package]
name = "renostrd"
description = "reNostr relay daemon"
authors = ["Dr. Maxim Orlovsky <orlovsky@cyphernet.io>"]
keywords = ["nostr", "privacy", "cypherpunk", "tor"]
categories = ["network-programming", "cryptography"]
homepage = "https://cyphernet.io"
repository = "https://github.com/reNostr/renotstrd"
version = "0.1.0"
rust-version = "1.65"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
amplify = "4.0.0"
io-reactor = "0.1.0"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
